--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </div>
             <div class="links">
                 <ul>
-                    <li>FINGER FOODS <i class="fa-solid fa-link"></i></li>
-                    <li>DESSERTS <i class="fa-solid fa-link"></i></li>
-                    <li>PLATTERS <i class="fa-solid fa-link"></i></li>
+                   <a href="#fingerfood"><li>FINGER FOODS <i class="fa-solid fa-link"></i></li></a> 
+                   <a href="#desserts"><li>DESSERTS <i class="fa-solid fa-link"></i></li></a> 
+                  <a href="#platter"> <li>PLATTERS <i class="fa-solid fa-link"></i></li></a> 
                 </ul>
             </div>
         </div>
@@ -42,18 +42,18 @@
             <p>MADE WITH LOVE</p>
         </div>
         <h1 class="newplaterH1">
-            New Platters
+            Freshly Made
         </h1>
     </div>
         <div class="heroImage">
             <div>
-            <img src="/Image/PLATTER1.jpeg" alt="Platter Image">
+            <img src="/Image/spring-rolls-with-cheese-dark-background.jpg" alt="Platter Image">
         </div>
         <div>
-            <img src="/Image/Platter2.jpeg" alt="Platter Image">
+            <img src="/Image/parfiattt.png" alt="Platter Image">
         </div>
         <div>
-            <img src="/Image/platter3.jpeg" alt="Platter Image">
+            <img src="/Image/close-up-delicious-chicken-meal.jpg" alt="Platter Image">
         </div>
         </div>
     </section>
@@ -102,6 +102,7 @@
     <h1 class="menuHeader">
         Explore Our Menu
     </h1>
+    <div class="dessertSection" id="desserts">
 <div class="dessertheader">
     <div class="healthyDrink">
         <p>HEALTHY DRINKS</p>
@@ -116,7 +117,43 @@
 </div>
 <div class="menuItemContent">
     <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p><i class="fa-solid fa-naira-sign"></i>2500</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/400MLPARFAIT.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>400ml parfait Cup</p>
+    <p><i class="fa-solid fa-naira-sign"></i>3000</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/500ML.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>500ml parfait Cup</p>
+    <p><i class="fa-solid fa-naira-sign"></i>4000</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/550ML.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>550ml parfait Cup</p>
+    <p><i class="fa-solid fa-naira-sign"></i>5500</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/yogurt.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>500ml Yoghurt</p>
+    <p><i class="fa-solid fa-naira-sign"></i>2000</p>
 </div>
 </div>
 <div class="menuItem">
@@ -124,8 +161,17 @@
     <img src="./Image/parfiat350ML.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>500ml Tiger nut</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1800</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/Zobo.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>500ml Zobo</p>
+    <p><i class="fa-solid fa-naira-sign"></i>700</p>
 </div>
 </div>
 <div class="menuItem">
@@ -133,57 +179,270 @@
     <img src="./Image/parfiat350ML.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>500ml Oat smoothies</p>
+    <p><i class="fa-solid fa-naira-sign"></i>2500</p>
+</div>
+</div>
+</div>
+<div class="btnCon">
+<a href="https://wa.me/+2348063242021" target="_blank"><button  >Order Now</button></a>
+</div>
+</div>
+    <div class="dessertSection" id="fingerfood">
+<div class="dessertheader">
+    <div class="healthyDrink">
+        <p>Customize</p>
+    </div>
+    <h1>Finger Food</h1>
+</div>
+<div class="menuList">
+
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/puffs.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Puffs</p>
+    <p><i class="fa-solid fa-naira-sign"></i>50</p>
 </div>
 </div>
 <div class="menuItem">
     <div class="menuItemImg">
-    <img src="./Image/parfiat350ML.png" alt="">
+    <img src="./Image/samosa.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>Samosa</p>
+    <p><i class="fa-solid fa-naira-sign"></i>300</p>
 </div>
 </div>
 <div class="menuItem">
     <div class="menuItemImg">
-    <img src="./Image/parfiat350ML.png" alt="">
+    <img src="./Image/springroll.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>Spring roll</p>
+    <p><i class="fa-solid fa-naira-sign"></i>300</p>
 </div>
 </div>
 <div class="menuItem">
     <div class="menuItemImg">
-    <img src="./Image/parfiat350ML.png" alt="">
+    <img src="./Image/mosa.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>Mosa</p>
+    <p><i class="fa-solid fa-naira-sign"></i>100</p>
 </div>
 </div>
 <div class="menuItem">
     <div class="menuItemImg">
-    <img src="./Image/parfiat350ML.png" alt="">
+    <img src="./Image/mearPie.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>Meat Pie</p>
+    <p><i class="fa-solid fa-naira-sign"></i>800</p>
 </div>
 </div>
 <div class="menuItem">
     <div class="menuItemImg">
-    <img src="./Image/parfiat350ML.png" alt="">
+    <img src="./Image/pepperedChicken.png" alt="">
 </div>
 <div class="menuItemContent">
-    <p>350ml parfait Cup</p>
-    <p>#2,500</p>
+    <p>Peppered Chicken</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1500</p>
 </div>
 </div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/snail.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Snail</p>
+    <p><i class="fa-solid fa-naira-sign"></i>800</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/beef.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Peppered Beef</p>
+    <p><i class="fa-solid fa-naira-sign"></i>500</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/turkey.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Turkey</p>
+    <p><i class="fa-solid fa-naira-sign"></i>5500</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/kripsychicken.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Krispsy chicken</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1700</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/plantain.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Fried Plantain</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1000</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/patato.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Fried Patato</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1000</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/french.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>French Fries</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1000</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/cornDog.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Special Corn Dog</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1000</p>
+</div>
+</div>
+<div class="menuItem">
+    <div class="menuItemImg">
+    <img src="./Image/yam.png" alt="">
+</div>
+<div class="menuItemContent">
+    <p>Fried Yam</p>
+    <p><i class="fa-solid fa-naira-sign"></i>1000</p>
+</div>
+</div>
+</div>
+<div class="btnCon">
+    <a href="https://wa.me/+2348063242021" target="_blank"><button  >Order Now</button></a>
+    </div>
+</div>
+    <div class="dessertSection" id="platter">
+<div class="dessertheader">
+    <div class="healthyDrink">
+        <p>Small Chops</p>
+    </div>
+    <h1>Platter</h1>
+</div>
+<div class="platterSection">
+    <main class="pla">
+<div class="platterItem">
+<div class="platterTop">
+    <p>Lite</p>
+    <p><i class="fa-solid fa-naira-sign"></i>3500</p>
+</div>
+<div class="platterButtom">
+    <p>1 samosa, 2 spring roll, 3 peppered beef,  4 puffs </p>
+</div>
+</div>
+<div class="platterItem">
+<div class="platterTop">
+    <p>Mini</p>
+    <p><i class="fa-solid fa-naira-sign"></i>4000</p>
+</div>
+<div class="platterButtom">
+    <p>2samosa, 2 spring roll, 3 mosa, 1 peppered chicken, 4 puffs, Yam fries/ plantain </p>
+</div>
+</div>
+</main>
+    <main class="pla">
+<div class="platterItem">
+<div class="platterTop">
+    <p>Box Solo</p>
+    <p><i class="fa-solid fa-naira-sign"></i>6000</p>
+</div>
+<div class="platterButtom">
+    <p>3 samosa, 3 spring roll, 2 beef, 1 peppered chicken, 6 puffs, Yam fries/ plantain </p>
+</div>
+</div>
+<div class="platterItem">
+<div class="platterTop">
+    <p>Classic</p>
+    <p><i class="fa-solid fa-naira-sign"></i>6000</p>
+</div>
+<div class="platterButtom">
+    <p>4 samosa, 4 spring roll, 2 peppered chicken,10 mosa, 20 puffs, 4 peppered beef, Yam fries/ plantain</p>
+</div>
+</div>
+</main>
+    <main class="pla">
+<div class="platterItem">
+<div class="platterTop">
+    <p>Family</p>
+    <p><i class="fa-solid fa-naira-sign"></i>15000</p>
+</div>
+<div class="platterButtom">
+    <p>6 samosa, 6 spring roll, 15 mosa, 30 puffs, 8 peppered chicken, Yam fries/ plantain</p>
+</div>
+</div>
+<div class="platterItem">
+<div class="platterTop">
+    <p>Feast</p>
+    <p><i class="fa-solid fa-naira-sign"></i>22000</p>
+</div>
+<div class="platterButtom">
+    <p>1 samosa, 2 spring roll, 3 peppered beef, 4 puffs </p>
+</div>
+</div>
+</main>
+</div>
+<div class="btnCon">
+    <button>Order Now</button>
+    </div>
 </div>
 </section>
+<section class="ourservices">
+    <div class="service">
+        <img src="/Image/oges_logo.png" alt="">
+        <h1>Our Services</h1>
+        <p>
+            We're passionate about creating delicious and refreshing experiences, no matter the size or setting. Whether you're craving a quick pick-me-up or planning a memorable event, we've got you covered!Zesty Zobo, Delightful Parfaits, & Savory Small Chops: Our menu offers a variety of treats to satisfy any craving.Small & Big Events: From intimate gatherings to grand celebrations, we can cater to events of all sizes.Indoor or Outdoor: We'll bring the flavor wherever the party is, be it a cozy living room or a spacious outdoor venue.Customizable Options: Let us know your vision and we'll create a menu that perfectly complements your event.Ready to add some refreshment and delight to your next gathering? Contact us today for a free consultation!
+        </p>
+    </div>
+    <div class="service">
+        <img src="/Image/ourboss.png" class="ourboss" alt="">
+        <h1>Our Boss</h1>
+        <p>
+            Hey there! I'm Ogechukwu Onyechukwu, owner of Oge’s sip and chew. We're passionate about delicious Nigerian treats made with fresh ingredients. Craving Zobo, Parfaits, or Small Chops? We have it all!
+We also cater events, big or small, indoors or out. Let us make your next gathering unforgettable.
+Browse our menu, explore catering, and contact us with any questions.
+Happy eating and drinking!
+        </p>
+    </div>
+</section>
+
+<footer>
+    <img src="/Image/oges_logo.png" class="footerlogo" alt="">
+    <div>
+    <a href="https://wa.me/+2348063242021" target="_blank"><img src="/Image/logos_whatsapp-icon.svg" alt=""></a>
+    <a href=""><img src="/Image/skill-icons_instagram.svg" alt=""></a>
+</div>
+<p>Ogy’s Treat 2024 ©️, All Right Reserved</p>
+</footer>
+<a href="https://wa.me/+2348063242021" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <img src="/Image/logos_whatsapp-icon.svg" alt="WhatsApp" width="50" height="50">
+</a>
+
 </main>
 </body>
 </html>
