--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="description" content="Delicious parfait, snacks, and healthy drinks in Enugu. We also cover events! Order now for fresh and tasty desserts, snacks, and drinks.">
+    <meta name="keywords" content="Parfait, snacks, healthy drinks, small chops, dessert, Enugu, event catering, healthy snacks, parfait cups, Enugu catering">
+    <meta name="author" content="Oge's sips 'n' chew ">
+    <meta name="robots" content="index, follow"> 
+      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oge's sip 'n' chew</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +17,7 @@
 <script src="script.js" defer></script>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="icon" href="/Image/oges_logo.png" type="image/png">
 </head>
 <body>
     <main>
