--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </div>
             <div class="links">
                 <ul>
-                   <a href="#fingerfood"><li>FINGER FOODS <i class="fa-solid fa-link"></i></li></a> 
-                   <a href="#desserts"><li>DESSERTS <i class="fa-solid fa-link"></i></li></a> 
-                  <a href="#platter"> <li>PLATTERS <i class="fa-solid fa-link"></i></li></a> 
+                   <a href="#fingerfood"><li>FINGER FOOD <i class="fa-solid fa-link"></i></li></a> 
+                   <a href="#desserts"><li>DESSERT <i class="fa-solid fa-link"></i></li></a> 
+                  <a href="#platter"> <li>PLATTER <i class="fa-solid fa-link"></i></li></a> 
                 </ul>
             </div>
         </div>
